--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189396">Bye, Chrome: Why I’m switching to Firefox</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.fastcodesign.com/90174010/bye-chrome-why-im-switching-to-firefox-and-you-should-too">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ProAm">ProAm</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:00:09 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
-                                    63.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17186932">HashLife: An Algorithm for Compressing Space and Time (2006)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -233,7 +213,7 @@
                                     <a class="node" href="https://en.wikipedia.org/wiki/Veblen_good">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Uberphallus">Uberphallus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 11:57:18 &nbsp;•&nbsp;
-                                    63 comments &nbsp;•&nbsp;
+                                    65 comments &nbsp;•&nbsp;
                                     58.0 points
                                 </span>
                             </td>
@@ -253,7 +233,7 @@
                                     <a class="node" href="https://www.consumerreports.org/cars-tesla-model-3-gets-cr-recommendation-after-braking-update/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=fmihaila">fmihaila</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 16:27:20 &nbsp;•&nbsp;
-                                    74 comments &nbsp;•&nbsp;
+                                    76 comments &nbsp;•&nbsp;
                                     56.0 points
                                 </span>
                             </td>
@@ -293,7 +273,7 @@
                                     <a class="node" href="https://www.facebook.com/location_history/view/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=jsonne">jsonne</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 20:14:17 &nbsp;•&nbsp;
-                                    47 comments &nbsp;•&nbsp;
+                                    49 comments &nbsp;•&nbsp;
                                     52.0 points
                                 </span>
                             </td>
@@ -406,14 +386,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187461">German butcher's GDPR notice</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://twitter.com/cszabla/status/1001619286090280960">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=egb">egb</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:29:20 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
+                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
+                                    11 comments &nbsp;•&nbsp;
                                     39.0 points
                                 </span>
                             </td>
@@ -426,15 +406,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190864">Signed Integers Are Two’s Complement</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187461">German butcher's GDPR notice</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2018/p0907r0.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=scott_s">scott_s</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:25:23 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
-                                    37.0 points
+                                    <a class="node" href="https://twitter.com/cszabla/status/1001619286090280960">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=egb">egb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:29:20 &nbsp;•&nbsp;
+                                    32 comments &nbsp;•&nbsp;
+                                    39.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,6 +526,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193172">Judge Dismisses Kaspersky Suit Challenging Software Ban</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.wsj.com/articles/judge-dismisses-kaspersky-suit-challenging-software-ban-1527711772">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=wglb">wglb</a></strong> &nbsp;•&nbsp;
+                                    2018-05-31 00:57:46 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
+                                    32.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17188294">Linux 4.17 I/O Scheduler Tests on an NVMe SSD Yield Surprising Results</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:10:03.585154</strong>
+            <strong>Last update at 2018-05-31 03:20:03.716519</strong>
         </div>
     </div>
 </div>
