--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189615">A hat that prevents facial recognition</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.kickstarter.com/projects/smallsuccess/dont-let-the-internet-or-companies-steal-your-face">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=smallsuccess">smallsuccess</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:25:20 &nbsp;•&nbsp;
-                                    6 comments &nbsp;•&nbsp;
-                                    15.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17187768">Thailand is new dumping ground for world's high-tech trash</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -426,6 +406,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193568">Sphere Packing Solved in 8 and 24 Dimensions</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.quantamagazine.org/sphere-packing-solved-in-higher-dimensions-20160330">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sinemetu11">sinemetu11</a></strong> &nbsp;•&nbsp;
+                                    2018-05-31 02:45:15 &nbsp;•&nbsp;
+                                    1 comments &nbsp;•&nbsp;
+                                    8.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17192670">Say hello to Justin Trudeau, the world's newest oil executive</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:10:03.585154</strong>
+            <strong>Last update at 2018-05-31 03:20:03.716519</strong>
         </div>
     </div>
 </div>
