--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17162971">The DisplayPort Pin 20 Problem</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    115 comments &nbsp;•&nbsp;
-                                    216.0 points
+                                    <a class="node" href="http://monitorinsider.com/displayport/dp_pin20_controversy.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=PascLeRasc">PascLeRasc</a></strong> &nbsp;•&nbsp;
+                                    2018-05-26 16:49:54 &nbsp;•&nbsp;
+                                    66 comments &nbsp;•&nbsp;
+                                    218.0 points
                                 </span>
                             </td>
                         </tr>
@@ -193,8 +193,8 @@
                                     <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    209 comments &nbsp;•&nbsp;
-                                    214.0 points
+                                    210 comments &nbsp;•&nbsp;
+                                    215.0 points
                                 </span>
                             </td>
                         </tr>
@@ -235,6 +235,26 @@
                                     2018-05-28 04:29:07 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
                                     213.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
+                                    37 comments &nbsp;•&nbsp;
+                                    212.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,26 +326,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    36 comments &nbsp;•&nbsp;
-                                    207.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -334,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 23:59:50 &nbsp;•&nbsp;
                                     9 comments &nbsp;•&nbsp;
-                                    205.0 points
+                                    206.0 points
                                 </span>
                             </td>
                         </tr>
@@ -414,7 +414,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
                                     57 comments &nbsp;•&nbsp;
-                                    193.0 points
+                                    194.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:20:03.716519</strong>
+            <strong>Last update at 2018-05-31 03:30:04.433987</strong>
         </div>
     </div>
 </div>
