--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17189727">Autonomous Boats Could Service Some Cities, Reducing Road Traffic</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://cacm.acm.org/news/228215-autonomous-boats-could-service-some-cities-reducing-road-traffic/fulltext">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 17:35:07 &nbsp;•&nbsp;
-                                    37 comments &nbsp;•&nbsp;
-                                    33.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17188294">Linux 4.17 I/O Scheduler Tests on an NVMe SSD Yield Surprising Results</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193487">Job Ads You Can’t See on Facebook If You’re Older (2017)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://projects.propublica.org/graphics/facebook-job-ads">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kawera">kawera</a></strong> &nbsp;•&nbsp;
+                                    2018-05-31 02:21:55 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    18.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17188035">How I Used Machine Learning to Predict Bitcoin Prices?</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -553,7 +553,7 @@
                                     <a class="node" href="https://stories.algolia.com/culture-as-a-growth-driver-f7df0222c67d">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 13:44:00 &nbsp;•&nbsp;
-                                    9 comments &nbsp;•&nbsp;
+                                    10 comments &nbsp;•&nbsp;
                                     16.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:30:04.433987</strong>
+            <strong>Last update at 2018-05-31 03:40:04.507290</strong>
         </div>
     </div>
 </div>
