--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190326">Intel Announces Optane DIMMs</a>
+                                    <a href="https://news.ycombinator.com/item?id=17170733">An embedded database written in Rust</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.anandtech.com/show/12828/intel-launches-optane-dimms-up-to-512gb-apache-pass-is-here">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=p1esk">p1esk</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 18:37:35 &nbsp;•&nbsp;
-                                    127 comments &nbsp;•&nbsp;
-                                    275.0 points
+                                    <a class="node" href="https://github.com/spacejam/sled">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mountainview">mountainview</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 05:32:28 &nbsp;•&nbsp;
+                                    72 comments &nbsp;•&nbsp;
+                                    277.0 points
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 19:10:01 &nbsp;•&nbsp;
                                     56 comments &nbsp;•&nbsp;
-                                    248.0 points
+                                    251.0 points
                                 </span>
                             </td>
                         </tr>
@@ -446,6 +446,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
+                                    38 comments &nbsp;•&nbsp;
+                                    215.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -475,26 +495,6 @@
                                     2018-05-28 04:29:07 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
                                     213.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
-                                    37 comments &nbsp;•&nbsp;
-                                    212.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:30:04.433987</strong>
+            <strong>Last update at 2018-05-31 03:40:04.507290</strong>
         </div>
     </div>
 </div>
