--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -186,26 +186,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17190705">Actix: a small, pragmatic, and fast Rust web framework</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://actix.rs/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=fafhrd91">fafhrd91</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 19:10:01 &nbsp;•&nbsp;
-                                    56 comments &nbsp;•&nbsp;
-                                    251.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17167063">Unifying Theories of Psychedelic Drug Effects</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -506,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
+                                    115 comments &nbsp;•&nbsp;
+                                    219.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166631">Analog Devices AD9361 – when microchips are more profitable than drugs</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -526,14 +526,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17187384">Nebulet: A microkernel that runs WebAssembly in Ring 0</a>
+                                    <a href="https://news.ycombinator.com/item?id=17190709">Uber, Google and others pay London Evening Standard for favorable coverage</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/nebulet/nebulet">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lachlan-sneff">lachlan-sneff</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 13:14:45 &nbsp;•&nbsp;
-                                    115 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.opendemocracy.net/uk/james-cusick/george-osborne-s-london-evening-standard-promises-positive-news-coverage-to-uber-goo">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tomjakubowski">tomjakubowski</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 19:10:42 &nbsp;•&nbsp;
+                                    38 comments &nbsp;•&nbsp;
                                     218.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:40:04.507290</strong>
+            <strong>Last update at 2018-05-31 03:50:03.610229</strong>
         </div>
     </div>
 </div>
