--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17193568">Sphere Packing Solved in Higher Dimensions (2016)</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.quantamagazine.org/sphere-packing-solved-in-higher-dimensions-20160330">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sinemetu11">sinemetu11</a></strong> &nbsp;•&nbsp;
-                                    2018-05-31 02:45:15 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    15.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17189615">A hat that prevents facial recognition</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -375,6 +355,26 @@
                                     2018-05-30 17:17:26 &nbsp;•&nbsp;
                                     6 comments &nbsp;•&nbsp;
                                     10.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17193499">UK Airprox board says police drone and jet had 'near-miss'</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.bbc.co.uk/news/uk-england-devon-44286754">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=jaytaylor">jaytaylor</a></strong> &nbsp;•&nbsp;
+                                    2018-05-31 02:23:28 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    9.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-31 03:50:03.610229</strong>
+            <strong>Last update at 2018-05-31 04:00:03.610573</strong>
         </div>
     </div>
 </div>
